--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,8 @@ a {
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
+  display: flex;
+  justify: space-around;
 }
 .weather-forecast-date {
   font-size: 16px;
