--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ a {
 .weather-forecast {
   margin-top: 20px;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-around;
 }
 .weather-forecast-date {
   font-size: 16px;
