--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ a {
 }
 .weather-forecast {
   margin-top: 20px;
-  display: flex;
+  justify: center;
 }
 .weather-forecast-date {
   font-size: 16px;
