--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,8 @@ a {
 }
 .weather-forecast {
   margin-top: 20px;
-  justify: center;
+  display: flex;
+  justify-content: space-around;
 }
 .weather-forecast-date {
   font-size: 16px;
