--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ footer {
   padding: 30px 0 0 0;
   text-align: center;
   font-size: 13px;
-  color: (0 0 0 (0.6));
+  color: rgba(0, 0, 0, 0.6);
 }
 a {
   color: #885df1;
