--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,9 @@ a {
 .weather-forecast-temperatures {
   font-size: 13px;
 }
+.weather-forecast-temperature-max{
+  font-size:bold;
+}
 .weather-forecast-temperature-min {
   opacity: 0, 5;
 }
