--- a/src/index.css
+++ b/src/index.css
@@ -98,9 +98,10 @@ a {
   font-size: 13px;
   display: flex;
   justify-content: center;
+  color:#f65282;
+  text-align:center;
+  
 }
-.weather-forecast-temperature-max{
-  font-size:bold;
 }
 .weather-forecast-temperature-min {
   opacity: 0, 5;
