--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   height: 552px;
 }
 .search-form-input {
-  background-color: f9f7fe;
+  background-color: #f9f7fe;
   border: none;
   border-radius: 6px;
   width: 80%;
