--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ a {
   margin-top: 30px;
   display: flex;
   justify-content: space-around;
+  display:block;
 }
 .weather-forecast-date {
   font-size: 16px;
