--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ a {
 .weather-forecast-temperatures {
   font-size: 13px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   color:#f65282;
   text-align:center;
   margin-top:10px;
